[package]
name = "pget"
version = "0.1.0"
authors = ["Zeb Piasecki <zeb@zebulon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
bytesize = "1.0.1"
colored = "2.0.0"
futures = "0.3.13"
reqwest = { version = "0.11.2", features = ["stream"] }
thiserror = "1.0.24"
tokio = { version = "1.4.0", features = ["rt", "macros", "rt-multi-thread", "fs"] }

[dev-dependencies.cargo-husky]
version = "1"
